2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-04  Andreas Kupries <andreask@activestate.com>

	* tcldocstrip.dtx:    Applied changes made by Lars to fix
	* tcldocstrip.ins:    a number of bugs he found. I am doing
	* tcldocstrip.stitch: it in his stead as he currently has
	  trouble with the SF CVS. Also fixed a syntax error in the
	  documentation.

	* Regenerated the other files. One new file,
	  "docstrip_util.test". All tests pass, regular and from within
	  the test harness.

2005-09-26  Andreas Kupries <andreask@activestate.com>

	* tcldocstrip.dtx: Fixed the testsuite bug regarding access to
	  files in the module under test.

	* docstrip.test: Regenerated.

2005-08-30  Andreas Kupries <andreask@activestate.com>

	* tcldocstrip.dtx:
	* docstrip_util.man: Fixed formatting problem in manpage. (Added a
	  missing closing bracket, and removed bad splitting across lines).

	* Added entry for a large commit done by Lars to the ChangeLog, on
	  behalf on Lars. See entry immediately below.

2005-08-28  Lars Hellstroem

	* New docstrip::util commands: guards, thefile, patch, and
	  import_unidiff. New -annotate option of docstrip::extract (used
	  by docstrip::util::patch). patch and import_unidiff still lack
	  .man documentation. The docstrip::util package still lacks
	  tests.

2005-02-14  Andreas Kupries <andreask@activestate.com>

	* docstrip: New module, by Lars Hellstroem, to support literate programming.
