@@ -1,3 +1,12 @@
+2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* tcldocstrip.dtx: Modified the setup of the testsuite to match
+	  the other modules and packages in tcllib. The testsuite
+	  especially now handles execution in a too old a Tcl core
+	  properly.
+	* docstrip.test:      Regenerated.
+	* docstrip_util.test: Regenerated.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
